# assessment

./: .gitignore  Cargo.toml  init-user-db.sh
assessment_fe/: README.md  package.json
assessment_fe/src/components/: HelloWorld.vue  Questionnaire.vue
assessment_fe/src/views/: HomeView.vue
entities/: Cargo.toml
entities/src/: devices.rs  lib.rs  prelude.rs  questions.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_devices.rs  m20240130_210657_create_questions.rs  z_seed_data.rs
src/: main.rs
