[package]
name    = "assessment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entities = { path = "entities" }
sea-orm = { version = "0.12.12", features = [
 "sqlx-postgres",
 "runtime-tokio-native-tls",
 "macros",
 "with-uuid",
 "sea-orm-internal",
] }
migration = { path = "migration" }
dotenvy = "0.15.7"
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
hyper-util = { version = "0.1.2", features = ["full"] }
hyper = { version = "1.1.0", features = ["full"] }
listenfd = "1.0.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
mime = "0.3.17"


[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[workspace]
resolver = "2"

members = ["migration", "entities"]

exclude = ["assessment_fe"]
