[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime = "0.3.17"
reqwest = { version = "0.11.23", features = ["json", "tokio-rustls"] }
sea-orm = { version = "0.12.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-uuid", "sea-orm-internal"] }
